tdf#102288 TerminationVetoException should only prevent termination

When using a TerminationVetoException, all windows should be closed,
but the process should be kept running.

Change-Id: I71b0b57b6035a36f0325c8dea3cd38309408f176